// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Area (unit tests) when initialized with icon should match the snapshot 1`] = `
<kv-text-area counter="" icon="kv-notes" max-char-length="100" state="none">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <div class="text-area-container">
      <kv-icon name="kv-notes"></kv-icon>
      <div class="text-area">
        <div class="text-area-wrapper">
          <div aria-multiline="true" class="input placeholder" contenteditable="plaintext-only" role="textbox"></div>
          <div class="character-counter">
            0 / 100
          </div>
        </div>
      </div>
    </div>
  </template>
</kv-text-area>
`;

exports[`Text Area (unit tests) when initialized with required props should match the snapshot 1`] = `
<kv-text-area counter="" max-char-length="100" state="none">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <div class="text-area-container">
      <div class="text-area">
        <div class="text-area-wrapper">
          <div aria-multiline="true" class="input placeholder" contenteditable="plaintext-only" role="textbox"></div>
          <div class="character-counter">
            0 / 100
          </div>
        </div>
      </div>
    </div>
  </template>
</kv-text-area>
`;

exports[`Text Area (unit tests) when initialized with text and placeholder should match the snapshot 1`] = `
<kv-text-area counter="" max-char-length="100" placeholder="Add Description" state="none" text="Hello World">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <div class="text-area-container">
      <div class="text-area">
        <div class="has-text text-area-wrapper">
          <div aria-multiline="true" aria-placeholder="Add Description" class="input" contenteditable="plaintext-only" data-placeholder="Add Description" role="textbox">
            Hello World
          </div>
          <div class="character-counter">
            11 / 100
          </div>
        </div>
      </div>
    </div>
  </template>
</kv-text-area>
`;

exports[`Text Area (unit tests) when initialized with text should match the snapshot 1`] = `
<kv-text-area counter="" max-char-length="100" state="none" text="Hello World">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <div class="text-area-container">
      <div class="text-area">
        <div class="has-text text-area-wrapper">
          <div aria-multiline="true" class="input" contenteditable="plaintext-only" role="textbox">
            Hello World
          </div>
          <div class="character-counter">
            11 / 100
          </div>
        </div>
      </div>
    </div>
  </template>
</kv-text-area>
`;
